# test-messenger

./: .gitignore  Dockerfile  pyproject.toml
.github/workflows/: docker-build.yml
api/: main.py  message.py  message_service.py
