[project]
name = "api"
version = "0.1.0"
description = "test-messenger-api is a simple testing groud to message about with python"
authors = [
    {name = "cjmak0"}
]
#readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
uvicorn = {extras = ["standard"], version = "^0.34.2"}

