[tool.poetry]
name = "test-messenger"
version = "0.1.0"
description = "A FastAPI messaging backend"
authors = ["cjmak0"]
license = "MIT"
readme = "README.md"
packages = [{ include = "api" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.24.0"  # no extras

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
httpx = "^0.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
